refactor: limpando codigo